# billybot

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  QUICK_START.md  README.md  TECHSTACK.md  docker-compose.yml  package.xml  recommendations.md  ruff.toml
.claude/agents/: ros2-launch-expert.md
.github/workflows/: ci.yml
agents/: __init__.py  graph.py
agents/common/: base_serializer.py  conversation_monitor.py  websocket_bridge.py
agents/gemini_bad/: gemini_serializer.py
agents/gemini_live/: main.py
agents/gemini_live_buggy/: gemini_session_manager.py
agents/oai_realtime/: __init__.py  main.py  oai_realtime_agent.py
archive/: jetson-deploy.sh
audio/: audio_data_to_stamped.py  clap_detector_node.py  file_audio_publisher.py  silero_vad_node.py  simple_audio_player.py
bringup/: byc.launch.py  gemini_live.launch.bad.py  gemini_live.launch.py  gemini_vision.launch.py  oai_dual_agent.launch.py
config/: clawdbot.json.template  config.yaml  gemini_command_agent.yaml  gemini_conversation_agent.yaml  gemini_conversational_agent.yaml  gemini_live_agent.yaml  oai_realtime_agent.yaml  prompts.yaml
config/systemd/: clawdbot.service
dashboard/: Dockerfile  HUD_DESIGN_SYSTEM.md  manage.py  requirements.txt
dashboard/core/: __init__.py  consumers.py  (+3 more)
dependencies/: npm-packages.txt  pip-requirements.txt
docs/: migration-guide.md  prompt_architecture_diagrams.md
interactions/: interaction_node.py
nanobot/: Dockerfile
nodes/: command_processor.py
ros/: CLAUDE.md  CMakeLists.txt  Dockerfile  docker-entrypoint.sh  package.xml
ros/.claude/agents/: ros2-launch-expert.md
ros/agents/common/: __init__.py  base_serializer.py  base_session_manager.py  context.py  debug_interface.py  pause_detector.py  prompt_loader.py
ros/agents/gemini_bad/: gemini_live_agent.py  gemini_session_manager.py  main.py
ros/agents/gemini_live/: gemini_live_agent.py  gemini_session_manager.py  receive_coordinator.py
ros/agents/gemini_live_buggy/: __init__.py  gemini_live_agent.py
ros/agents/oai_realtime/: oai_serializer.py  oai_session_manager.py
ros/agents/oai_realtime/test/: test_connection_retry.py  test_conversation_quick.py  test_named_prompts.py  test_prompt_switching_simple.py  test_runtime_prompt_switching.py
ros/agents/tools/: command_scraper.py
ros/audio/: __init__.py  audio_data_to_stamped.py  clap_detector_node.py  echo_suppressor.py  file_audio_publisher.py  silero_vad_node.py  simple_audio_player.py  voice_chunk_recorder.py
ros/bringup/: behaviors.launch.py  byc.launch.py  camera.launch.py  gemini_dual_agent.launch.py  gemini_live.launch.bad.py  gemini_live.launch.py  gemini_single.launch.py  gemini_vision.launch.py  hardware.launch.py  navigation.launch.py  oai_dual_agent.launch.py  oai_realtime.launch.py
ros/config/: behaviors.yaml  bridge_dual_agent.yaml  bridge_gemini_vision.yaml  camera.yaml  hardware.yaml  nav2_params.yaml  oai_command_agent.yaml
ros/devrules/: agentic_rules.md
ros/docs/diagrams/: prompt_macro_expansion.dot  render_diagrams.sh  system_integration_overview.dot  test.emf  test.wmf
ros/hardware/: __init__.py  ddsm_serial.py  st3215_serial.py
ros/interactions/: __init__.py
ros/msg/: AudioDataUtterance.msg  AudioDataUtteranceStamped.msg
ros/nodes/: behavior_manager_node.py  camera_driver_node.py  command_processor.py  ddsm_driver_node.py  spatial_memory_node.py  st3215_driver_node.py
ros/ros_ai_bridge/: __init__.py  ros_ai_bridge.py
ros/scripts/: update_docs_topics.py  update_test_topics.py
ros/setup/: requirements.txt
ros/specs/: context_management_enhancements_for_dual_agents_prd.md  oai_realtime_prd.md  ros_ai_bridge_architecture.md  system_prd.md  topic_renaming_refactoring_prd.md  voice_detection_prd.md
ros/specs/analysis/: clap_detection.md  openai_gemini_api_mapping.md  pipecat_gemini_live_example_analysis.md  wakeword_wakeword_partytime_excellent.md
ros/specs/research/: clap-detector.txt  vizanti20250804.md
ros/specs/sessions/: 2025-07-23-byc_agent_arch.txt  2025-07-28-added-2nd-oai-instance.txt  2025-07-28-dual-agents.txt  2025-07-31-AEC.txt  2025-08-05-conversation-improvements.txt  2025-08-11-command-routing-namespacing.txt  2025-08-12-start-gemini-conversion.txt  2025-08-14-refocus-gemini-agent-aproach.txt  2025-08-15-restructure-agent-support-code.txt  2025-08-21-gemini-fresh-start-and-api-tests.txt  2025-08-21-gemini-more-debugging.txt  2025-08-22-gemini-video-debug.txt  2025-08-22-more-gemini-vision-debugging.txt  2025-08-23-gemini-finally-cracked-image+audio-send.txt  2025-08-29-dual-gemini-and-sleep-debug.txt  2025-09-09-trynafix-gemini.txt
ros/tests/: analyze_recordings.py  audio_recorder.py  launch_commands.txt  test_clap_detection.py  test_clap_frequency_analysis.py  test_connection_cycles.py  test_conversation_id_pub.py  test_data_driven_clap.py  test_refactored_components.py  test_simple_energy_clap.py  test_websocket_bridge.py
ros/tests/gemini/: test_gemini_ready.py  test_model_names.py  test_object_detection_visual.py  test_receive_after_send.py  test_receive_issue.py  test_text_communication.py  test_video_detection.py
ros/tests/output/: .gitignore
ros/urdf/: billybot.urdf.xml
scripts/: backup-current-system.sh  deploy.sh  expand_prompt.py  healthcheck.sh  migrate-to-jetson.sh  update_launch_topics.py
setup/: =1.93.0  setup.sh
specs/: acoustic_echo_cancellation_prd.md  gemini_live_direct_prd.md  gemini_live_pipecat_prd.md  multi_agent_prd.md  topic_migration_guide.md  utterance_enhancement_summary.md
tests/: __init__.py  debug_agent_state.py  debug_voice_active_flow.py  publish_command.py  test_agent_quick.py  test_command_processor.py  test_external_clap.py  test_external_clap_tuned.py  test_external_conversation_reset.py  test_full_websocket_system.py  test_gemini_agent.py  test_gemini_hybrid.py  test_gemini_with_image.py  test_recorder_integration.py  test_repeated_clap_wake.py  test_sleep_clap_integration.py  test_sliding_window_clap.py  test_spectral_clap.py  test_topic_renaming.py  test_transient_clap.py  test_utterance_chunks.py  test_vad_mute_control.py
(+68 files in other folders)
